Pubblication 28/04/2016
Work in progress: annotation reader, serialiser