@@ -9,7 +9,6 @@ import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.HashMap;
-//import java.util.Vector;
 import java.util.List;
 import java.util.Properties;
 import java.util.SortedMap;
@@ -30,19 +29,10 @@ import it.classhidra.scheduler.scheduling.init.batch_init;
 import it.classhidra.scheduler.scheduling.thread.schedulingThreadEvent;
 import it.classhidra.scheduler.util.util_batch;
 
-
-
-
-
-
 public class ProcessBatchEvent  {
-	
-
-
 
 	public ProcessBatchEvent(){
 		super();
-
 	}
 
 	public void launch(Integer cd_ist, String cd_btch, boolean recalc, boolean sequence){
@@ -88,15 +78,26 @@ public class ProcessBatchEvent  {
 		}
 		return result_eb;
 	}	
+	
+	public String[] single(db_batch batch, db_batch_log log, i_batch worker){
+		String[] result_eb = null;
+		try {
+			result_eb = executeSingle(batch,log, worker, "");
+		}catch(Exception ex){
+			new bsException("Scheduler: "+ex.toString(),iStub.log_ERROR);
+		}catch(Throwable th){
+			new bsException("Scheduler: "+th.toString(),iStub.log_ERROR);
+		}
+		return result_eb;
+	}		
 
 
 	private String[] executeBatch(Integer cd_ist, String cd_btch, String common_area, boolean recalc, boolean sequence, boolean parent_recalc){
 		
 		batch_init binit = DriverScheduling.getConfiguration();
-		String[] result_eb = new String[2];
-		result_eb[0]=common_area;
-		result_eb[1]="1";
-		if(cd_ist==null || cd_btch==null) return result_eb;
+		String[] result_eb = new String[]{common_area,"1"};
+		if(cd_ist==null || cd_btch==null)
+			return result_eb;
 
 		db_batch batch = null;
 
@@ -104,7 +105,6 @@ public class ProcessBatchEvent  {
 		log.setTm_start(new Timestamp(new Date().getTime()));
 
 		i_batch currentBatchClass = null;
-//		boolean isChild=false;
 		try {
 			Integer initialBatchState = Integer.valueOf(0); 
 			batch = util_batch.checkBatchAndState(cd_ist, cd_btch, log);
@@ -124,29 +124,12 @@ public class ProcessBatchEvent  {
 			}
 			log.setTm_start(new Timestamp(new Date().getTime()));
 			
-/*			
-			batch = new db_batch();
-			batch.setCd_ist(cd_ist);
-			batch.setCd_btch(cd_btch);
-			batch = (db_batch)util_blob.load_db_element(batch, null);
-			if(	batch==null ||
-				batch.getState().shortValue()== db_batch.STATE_INEXEC ||
-				batch.getState().shortValue()== db_batch.STATE_SUSPEND) return result_eb;
-
-			log.setCd_btch(batch.getCd_btch());
-
-			Integer initialBatchState = batch.getState();
-			changeState(batch, new Integer(db_batch.STATE_INEXEC));
-*/			
-			
-			
 
 			String output = "";
 			SortedMap h_common_area = new TreeMap();
 			try{
 				
 				if(batch.getCls_btch()!=null && !batch.getCls_btch().equals("")){
-//					currentBatchClass = loadBatchsClass(batch);	
 					currentBatchClass = DriverScheduling.getBatchInstance(batch.getCd_btch(), batch.getCls_btch());
 					if(currentBatchClass!=null)
 						currentBatchClass.setDb(batch);
@@ -178,14 +161,14 @@ public class ProcessBatchEvent  {
 						
 						log.setDsc_exec(((log.getDsc_exec()==null)?"":log.getDsc_exec())+output);
 						if(currentBatchClass.getExit().equals("OK")){
-							log.setSt_exec(new Integer(i_batch.STATE_OK));
+							log.setSt_exec(Integer.valueOf(i_batch.STATE_OK));
 						} else if(currentBatchClass.getExit().equals("KO")){
-							log.setSt_exec(new Integer(i_batch.STATE_KO));
-						} else log.setSt_exec(new Integer(i_batch.STATE_WARNING));
+							log.setSt_exec(Integer.valueOf(i_batch.STATE_KO));
+						} else log.setSt_exec(Integer.valueOf(i_batch.STATE_WARNING));
 
 					}catch (Exception e) {
 						log.setDsc_exec(((log.getDsc_exec()==null)?"":log.getDsc_exec())+e.toString());
-						log.setSt_exec(new Integer(i_batch.STATE_KO));
+						log.setSt_exec(Integer.valueOf(i_batch.STATE_KO));
 						currentBatchClass.onErrorExecute();
 					}
 
@@ -207,7 +190,6 @@ public class ProcessBatchEvent  {
 					}
 						
 					for(int i=0;i<child_batch.size();i++){
-//							isChild=true;
 							db_batch current = (db_batch)child_batch.get(i);
 							String[] current_eb = executeBatch(current.getCd_ist(), current.getCd_btch(), common_area,false,true,parent_recalc);
 							common_area = current_eb[0];
@@ -222,22 +204,20 @@ public class ProcessBatchEvent  {
 				}
 			}catch(Exception e){
 				log.setDsc_exec(((log.getDsc_exec()==null)?"":log.getDsc_exec())+e.toString());
-				log.setSt_exec(new Integer(i_batch.STATE_KO));
+				log.setSt_exec(Integer.valueOf(i_batch.STATE_KO));
 				batch.setSt_exec(log.getSt_exec());
 			}
 
 			
 			log.setTm_fin(new Timestamp(new Date().getTime()));
 			log.setSt_exec(batch.getSt_exec());
-//			log.setDsc_exec(((log.getDsc_exec()==null)?"":log.getDsc_exec()) + generic_batch.map2xml(h_common_area));
 
 			if(!recalc && !sequence) 
 				batch.setState(initialBatchState);
 			else 
-				batch.setState(new Integer(i_batch.STATE_NORMAL));
+				batch.setState(Integer.valueOf(i_batch.STATE_NORMAL));
 			if(batch.getCd_p_btch()==null || batch.getCd_p_btch().equals("")){
 
-//				if(batch.getSt_exec().shortValue()==db_batch.STATE_NORMAL && batch.getPeriod()!=null && !batch.getPeriod().equals("")){
 				if(batch.getState().shortValue()==i_batch.STATE_NORMAL && batch.getPeriod()!=null && !batch.getPeriod().equals("")){
 					try{
 						if(recalc){
@@ -266,13 +246,10 @@ public class ProcessBatchEvent  {
 							
 							long nextScanTimeL=DriverScheduling.getThProcess().getPbe().getNextScanTime().getTime();
 							long delta = nextScanTimeL - currentTimeL;
-//							long deltaTmp = batch.getTm_next().getTime() - recT;
 							long deltaTmp = batch.getTm_next().getTime() - new Date().getTime();
 							if(delta>0 && 0 <= deltaTmp && deltaTmp <= delta){
-								batch.setState(new Integer(i_batch.STATE_SCHEDULED));
+								batch.setState(Integer.valueOf(i_batch.STATE_SCHEDULED));
 	
-//								long deltaBatch = batch.getTm_next().getTime() - new Date().getTime();
-
 								try{
 									schedulingThreadEvent t_ev_old = util_batch.findFromPbe(DriverScheduling.getThProcess().getPbe(), batch.getCd_btch());
 									if(t_ev_old!=null){
@@ -283,12 +260,6 @@ public class ProcessBatchEvent  {
 									}
 								}catch(Exception e){
 								}
-/*								
-								schedulingThreadEvent t_ev = new schedulingThreadEvent(
-										deltaBatch,
-										batch,
-										servletBatchScheduling.getThProcess().getPbe());
-*/
 								schedulingThreadEvent t_ev = new schedulingThreadEvent(batch,DriverScheduling.getThProcess().getPbe());								
 								t_ev.start();
 							}else{
@@ -300,7 +271,6 @@ public class ProcessBatchEvent  {
 					}			
 				}else{
 					if(batch.getState().shortValue()==i_batch.STATE_NORMAL)
-//					if(batch.getSt_exec().shortValue()==db_batch.STATE_NORMAL)
 						new bsException("BatchEngine:reScheduling after exec->false: batch->"+batch.getCd_btch()+": state->"+batch.getSt_exec().shortValue()+": period->"+batch.getPeriod(), iStub.log_WARN);
 				}
 			}
@@ -308,12 +278,12 @@ public class ProcessBatchEvent  {
 			
 		}catch(Exception ex){
 			log.setDsc_exec(((log.getDsc_exec()==null)?"":log.getDsc_exec())+ex.toString());
-			log.setSt_exec(new Integer(i_batch.STATE_KO));
+			log.setSt_exec(Integer.valueOf(i_batch.STATE_KO));
 			batch.setSt_exec(log.getSt_exec());
 
 		}catch(Throwable th){
 			log.setDsc_exec(((log.getDsc_exec()==null)?"":log.getDsc_exec())+th.toString());
-			log.setSt_exec(new Integer(i_batch.STATE_KO));
+			log.setSt_exec(Integer.valueOf(i_batch.STATE_KO));
 			batch.setSt_exec(log.getSt_exec());
 		}finally{
 
@@ -325,15 +295,116 @@ public class ProcessBatchEvent  {
 		result_eb[1]=batch.getSt_exec().toString();
 		return result_eb;
 	}
+	
+	
+	private String[] executeSingle(db_batch batch, db_batch_log log, i_batch worker, String common_area){
+		
+		batch_init binit = DriverScheduling.getConfiguration();
+		String[] result_eb = new String[]{common_area,"1"};
+		if(batch==null || log==null) 
+			return result_eb;
 
-/*
-	private i_batch loadBatchsClass(db_batch batch) throws Exception{
-		i_batch objBatch = null;
-		objBatch = (i_batch)Class.forName(batch.getCls_btch()).newInstance();
-		if(objBatch!=null) objBatch.setDb(batch);
-		return objBatch;
+
+		log.setTm_start(new Timestamp(new Date().getTime()));
+
+
+		try {
+			
+			
+			log.setCd_btch(batch.getCd_btch());
+			batch.setInitialState(batch.getState());
+			batch.setState(Integer.valueOf(i_batch.STATE_INEXEC));	
+			Integer initialBatchState = batch.getInitialState();
+
+
+			log.setTm_start(new Timestamp(new Date().getTime()));
+			
+
+			String output = "";
+			SortedMap h_common_area = new TreeMap();
+			try{
+				
+				if(worker==null){
+					if(batch.getCls_btch()!=null && !batch.getCls_btch().equals("")){
+						worker = DriverScheduling.getBatchInstance(batch.getCd_btch(), batch.getCls_btch());
+						if(worker!=null)
+							worker.setDb(batch);
+					}
+				}else
+					worker.setDb(batch);
+				
+				
+				if(worker!=null){
+					worker.onBeforeReadInput(common_area);
+					worker.readInput(common_area);
+					worker.onAfterReadInput(common_area);
+					try{
+						worker.onBeforeExecute();
+						worker.execute();
+						worker.onAfterExecute();
+
+						log.setWriteLog(worker.isWriteLog());
+						h_common_area.putAll(worker.getInput());
+						h_common_area.putAll(worker.getOutput());
+						common_area = generic_batch.map2xml(h_common_area);
+						
+						worker.onBeforeWriteOutput();
+						output = worker.writeOutput();
+						worker.onAfterWriteOutput();
+						
+						
+						log.setDsc_exec(((log.getDsc_exec()==null)?"":log.getDsc_exec())+output);
+						if(worker.getExit().equals("OK")){
+							log.setSt_exec(Integer.valueOf(i_batch.STATE_OK));
+						} else if(worker.getExit().equals("KO")){
+							log.setSt_exec(Integer.valueOf(i_batch.STATE_KO));
+						} else log.setSt_exec(Integer.valueOf(i_batch.STATE_WARNING));
+
+					}catch (Exception e) {
+						log.setDsc_exec(((log.getDsc_exec()==null)?"":log.getDsc_exec())+e.toString());
+						log.setSt_exec(Integer.valueOf(i_batch.STATE_KO));
+						worker.onErrorExecute();
+					}
+
+					log.setTm_fin(new Timestamp(new Date().getTime()));
+					batch.setSt_exec(log.getSt_exec());
+
+				}
+			}catch(Exception e){
+				log.setDsc_exec(((log.getDsc_exec()==null)?"":log.getDsc_exec())+e.toString());
+				log.setSt_exec(Integer.valueOf(i_batch.STATE_KO));
+				batch.setSt_exec(log.getSt_exec());
+			}
+
+			
+			log.setTm_fin(new Timestamp(new Date().getTime()));
+			log.setSt_exec(batch.getSt_exec());
+
+			batch.setState(initialBatchState);
+			
+			
+		}catch(Exception ex){
+			log.setDsc_exec(((log.getDsc_exec()==null)?"":log.getDsc_exec())+ex.toString());
+			log.setSt_exec(Integer.valueOf(i_batch.STATE_KO));
+			batch.setSt_exec(log.getSt_exec());
+
+		}catch(Throwable th){
+			log.setDsc_exec(((log.getDsc_exec()==null)?"":log.getDsc_exec())+th.toString());
+			log.setSt_exec(Integer.valueOf(i_batch.STATE_KO));
+			batch.setSt_exec(log.getSt_exec());
+		}finally{
+
+			if(log.isWriteLog()) writeLog(log);
+			changeState(batch, batch.getState());
+		}
+		new bsException("Scheduler: BatchEvent:exec for:["+batch.getCd_btch().trim()+ ((worker==null)?" ":" "+worker.getVersion()) +"]->"+batch.getDesSt_exec(), iStub.log_INFO);
+		result_eb[0]=common_area;
+		result_eb[1]=batch.getSt_exec().toString();
+		return result_eb;
 	}
-*/
+	
+
+
 	private void checkExcluded(db_batch batch) throws Exception{
 		bsException exReturn = null;
 		Properties properties = generic_batch.loadProperty(batch);
@@ -393,37 +464,7 @@ public class ProcessBatchEvent  {
 			new bsException(e,iStub.log_ERROR);
 		}		
 		
-/*		
-		Connection conn=null;
-		Statement st=null;
-		try{
 
-			conn = new db_connection().getContent();
-			conn.setAutoCommit(false);
-			st = conn.createStatement();
-
-			batch.setState(state);
-
-			if(
-				(batch.getPeriod()!=null && !batch.getPeriod().equals("")) ||
-				(batch.getCd_p_btch()!=null && !batch.getCd_p_btch().equals("")) ||
-				(batch.getCls_btch()!=null && !batch.getCls_btch().equals(""))
-			)
-				st.execute(batch.sql_Update(batch));
-			else
-				st.execute(batch.sql_UpdateOnlyState(batch));
-			conn.commit();
-
-		}catch(Exception ex){
-			try{
-				conn.rollback();
-			}catch(Exception e){
-			}
-			new bsException("Scheduler: "+ex.toString(),iStub.log_ERROR);
-		}finally{
-			db_connection.release(null, st, conn);
-		}
-*/
 	}
 
 	private void writeLog(db_batch_log log){
@@ -438,29 +479,7 @@ public class ProcessBatchEvent  {
 		}catch(Exception e){
 			new bsException(e,iStub.log_ERROR);
 		}		
-/*
-		Connection conn=null;
-		Statement st=null;
 
-
-		try{
-
-			conn = new db_connection().getContent();
-			conn.setAutoCommit(false);
-			st = conn.createStatement();
-
-			st.executeUpdate(log.sql_Insert());
-			conn.commit();
-		}catch(Exception ex){
-			try{
-				conn.rollback();
-			}catch(Exception e){
-			}
-			new bsException("Scheduler: "+ex.toString(),iStub.log_ERROR);
-		}finally{
-			db_connection.release(null, st, conn);
-		}
-*/
 	}
 	
 
